# spotiscreen

./: README.md  pyproject.toml  spotiscreen.py
spotiscreen/: main.py  ticker.py
