[project]
name = "spotiscreen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pidili",
    "requests>=2.32.3",
    "smartscreen-driver>=0.2.3",
    "spotipy>=2.25.0",
    "xdg>=6.0.0",
]

[project.scripts]
spotiscreen = "spotiscreen.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
config-settings = { editable_mode = "compat" }
