[project]
name = "spotiscreen"
version = "0.1.0"
description = "Display your Spotify's currently playing song on a low-cost USB smartscreen"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pidili>=0.1.0",
    "requests>=2.32.3",
    "smartscreen-driver>=0.2.3",
    "spotipy>=2.25.0",
    "xdg>=6.0.0",
]

[project.scripts]
spotiscreen = "spotiscreen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
